# bridge

./: .gitignore  pyproject.toml
BRIDGE.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bridge/: matched_images.csv  matched_images_bright.fits
bridge/FINK_alert/: alertreader.py  query_alert.py
bridge/LVK_alert/: grace_alert.py  kafka_alert.py
bridge/alertconsumer/: __init__.py  alerceconsumer.py  finkconsumer.py  run_alerce_lsst.py  run_alerce_ztf.py  run_fink_lsst.py  run_fink_ztf.py  run_tns.py.py  tnsconsumer.py
bridge/alertfilter/: __init__.py  basefilter.py  lsst_alerce_filter.py  lsst_fink_filter.py  tns_filter.py  ztf_alerce_filter.py  ztf_fink_filter.py
bridge/alertmonitor/: __init__.py  alertchecker.py  alertclassifier.py  alertprocessor.py  swarp.xml
bridge/alertquerier/: __init__.py  alercequerier.py  finkquerier.py  targets.ascii  tnsquerier.py
bridge/alerttrigger/: alerttrigger.py
bridge/analysis/: 260521_check_alert_statistics.py
bridge/configuration/: alerceconsumer.config  alercequerier.config  alertchecker.config  alertclassifier.config  alertprocessor.config  alerttrigger.config  configuration copy.py  configuration.py  convert_json_to_yaml.py  finkconsumer.config  finkquerier.config  gmailconnector.config  gwportalconnector.config  hostgalaxycatalog.config  lsst_alerce_filter.config  lsst_fink_filter.config  sdsconnector.config  sqlconnector.config  tns_filter.config  tnsconsumer.config  tnsquerier.config  ztf_alerce_filter.config  ztf_fink_filter.config
bridge/connector/: Interactive-1.interactive  __init__.py  gmail_connector.py  (+7 more)
(+362 files in other folders)
